# hik_camera_ros_driver

./: CMakeLists.txt  README.md
config/: cameara.cfg  camera.yaml  camera_1.yaml  camera_1_info.yaml  camera_2.yaml  ost.yaml  ost_1.txt  ost_2.txt  ost_2.yaml
include/hik_camera_driver/: camera.h
launch/: camera.launch
src/: camera.cpp  hik_driver.cpp
